# ccmux

./: .gitattributes  .gitignore  BRANCHING.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  ONBOARDING.md  README.ja.md  README.md
.claude/: settings.json  settings.local.json
.claude/skills/upstream-sync/: SKILL.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
blog/: astro.config.mjs  package-lock.json  package.json
blog/src/content/posts/: binary-tree-pane-layout.mdx  bracketed-paste.mdx  claude-detection-via-window-title.mdx  hello.mdx  idle-zero-cpu.mdx  parsing-claude-jsonl.mdx  portable-pty-cross-platform.mdx  subagent-lifecycle-tracking.mdx  why-vt100.mdx
blog/src/layouts/: BaseLayout.astro  PostLayout.astro
blog/src/pages/: [...slug].astro  index.astro  rss.xml.ts
blog/src/styles/: global.css
ccmux-layouts/: cc-campany.toml
docs/: PITCH.md  api-surface-v1.0.md  configuration.ja.md  configuration.md  ime.ja.md  ime.md  keymap.ja.md  keymap.md  mdx-components.tsx  next.config.mjs  og-generator.html  package-lock.json  package.json  peer-messaging.ja.md  peer-messaging.md  semver-policy.md  tsconfig.json
docs/app/: globals.css  layout.tsx
docs/app/[[...mdxPath]]/: page.tsx
docs/content/: _meta.ts  architecture.mdx  features.mdx  getting-started.mdx  ime.mdx  index.mdx  ipc.mdx  keybindings.mdx  peer-messaging.mdx
docs/content/en/: _meta.ts  architecture.mdx  features.mdx  getting-started.mdx  ime.mdx  index.mdx  ipc.mdx  keybindings.mdx  peer-messaging.mdx
docs/github-issues/: 001-harden-npm-installer-verification.md  002-fix-unix-ipc-socket-uid-resolution.md
lp/: index.html  ja.html
npm/: README.md  package.json
npm/scripts/: install.js
renga-layouts/: cc-campany.toml  test.toml
src/: app.rs  claude_monitor.rs  cli.rs  config.rs  filetree.rs  i18n.rs  layout_config.rs  macos_tip.rs  main.rs  pane.rs  perf_trace.rs  preview.rs  ui.rs  version_check.rs
src/app/: app_core.rs  app_state.rs  codex_peer.rs  ipc_handlers.rs  keyboard_input.rs  layout_ops.rs  layout_tree.rs  pointer_input.rs  runtime.rs  selection.rs  sidebar_input.rs  tests.rs  workspace_state.rs
src/app/tests/: clipboard_paste.rs  codex_peer.rs  ipc_state.rs  layout_tree.rs  overlay.rs  pointer_input.rs  workspace_ops.rs
src/input/: mod.rs  overlay.rs
src/ipc/: client.rs  endpoint.rs  events.rs  mod.rs  server.rs
src/mcp_peer/: install.rs  mod.rs
