[package]
name = "ccmux"
# Fork keeps its own version line. 0.7.0 jumps past upstream 0.6.0 so
# users can tell fork and upstream apart at a glance, and reflects the
# breaking change in `mode = "always"` removal (#90) plus the shipped
# IME overlay rework (#85 / #86) and image-preview sync (#91).
# 0.8.0 rolls up the i18n auto-locale (#98), click-event forwarding
# (#100), and IME freeze-on-overlay defaults flipped ON (#101); the
# last is a user-visible behavior change for anyone who opens the
# IME overlay, hence the minor bump rather than a patch.
# 0.9.0 ships per-tab peer messaging between Claude Code panes (#97 /
# #104): `ccmux mcp install` registers a stdio MCP server, `Alt+P`
# inserts the peer-enabled launch command, and `ccmux split --role
# claude` auto-launches Claude Code with the channel flag. The new
# keybinding and the user-visible `ccmux mcp` subcommand tree are why
# this is a minor bump.
version = "0.9.0"
edition = "2021"
description = "Claude Code Multiplexer — manage multiple Claude Code instances in TUI panes"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
portable-pty = "0.8"
vt100 = "0.16"
anyhow = "1.0"
unicode-width = "0.2.1"
arboard = "3.6"
syntect = "5.3"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
serde_json = "1"
dirs = "5"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# 2.4.2 removes the `CannotUnwind` guard from `exsync_op`. On 2.4.0 a
# Win32 write failure during IPC — normal when a `ccmux events` client
# disconnects ahead of the 30 s heartbeat — propagated via `?` before
# the guard's `.end()` ran, so its `Drop` aborted the whole TUI via
# `std::process::abort()` / `__fastfail`. Silent death, no panic. Pin
# so a downgrade can't reintroduce it.
interprocess = "2.4.2"
oneshot = "0.1"
subtle = "2"
humantime = "2"
# Upstream image-preview sync (#7): image decoding + ratatui-image
# picker / protocol detection for the preview panel.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
ratatui-image = { version = "10", default-features = false, features = ["crossterm"] }
# OS locale detection for auto UI-language selection. Wraps
# `nl_langinfo` on Unix and `GetUserDefaultLocaleName` on Windows so
# users without `LANG`/`LC_*` env vars (notably vanilla Windows Terminal
# + PowerShell, PR #94's target audience) still get the right default.
sys-locale = "0.3"

[target.'cfg(unix)'.dependencies]
# getuid() for the IPC endpoint directory name. Used only on Unix;
# on Windows the endpoint is a Named Pipe that doesn't need a uid.
libc = "0.2"
