[package]
name = "ccmux"
# Fork keeps its own version line. 0.7.0 jumps past upstream 0.6.0 so
# users can tell fork and upstream apart at a glance, and reflects the
# breaking change in `mode = "always"` removal (#90) plus the shipped
# IME overlay rework (#85 / #86) and image-preview sync (#91).
# 0.8.0 rolls up the i18n auto-locale (#98), click-event forwarding
# (#100), and IME freeze-on-overlay defaults flipped ON (#101); the
# last is a user-visible behavior change for anyone who opens the
# IME overlay, hence the minor bump rather than a patch.
# 0.9.0 ships per-tab peer messaging between Claude Code panes (#97 /
# #104): `ccmux mcp install` registers a stdio MCP server, `Alt+P`
# inserts the peer-enabled launch command, and `ccmux split --role
# claude` auto-launches Claude Code with the channel flag. The new
# keybinding and the user-visible `ccmux mcp` subcommand tree are why
# this is a minor bump.
# 0.10.0 centers on macOS Alt-key ergonomics:
# - #107 documents the per-terminal Option=Meta setup (WezTerm /
#   iTerm2 / Alacritty / Ghostty / Kitty / Terminal.app) in the
#   README and cross-links it from the IME overlay Alt+Enter note.
# - #108 adds a first-launch banner on macOS that surfaces the same
#   setup hint at runtime and links to the README anchor, dismissed
#   by any key or a 20 s timeout and persisted via a zero-byte
#   marker at `~/.config/ccmux/.macos_tip_dismissed`. Two new
#   override flags (`--no-macos-tip` / `--show-macos-tip`) and the
#   `CCMUX_NO_MACOS_TIP` env var are the user-visible surface. The
#   landing page (`lp/index.html` / `lp/ja.html`) also grows a
#   dedicated "macOS setup: Option as Meta" section so visitors can
#   read the configuration before installing.
# Minor bump (not patch) because the banner is a first-launch
# behavior change on macOS and the CLI surface grows — patch is
# reserved for bug-only fixes per the release policy.
# 0.11.0 adds FILES-sidebar Claude launcher keys (#110): `c`
# splits the focused pane left/right and `v` splits it top/bottom,
# each opening the new pane in the directory selected in the tree
# and pre-filling the Alt+P launch line without pressing Enter so
# the user reviews and commits. New keybindings are why this is a
# minor bump rather than a patch.
# 0.12.0 opens the IME composition overlay at its configured maximum
# height (`OVERLAY_MAX_INNER_HEIGHT` = 10 rows) on the first frame
# instead of starting at a single row and growing as the user typed
# (#112). Overlay-open dimensions are visible behavior so this is a
# minor bump, not a patch.
# 0.13.0 brings the peer MCP pane-control tool suite and the Alt+P
# claude auto-upgrade (#114): the `ccmux-peers` MCP server gains
# `spawn_pane` / `close_pane` / `focus_pane` / `list_panes` / `new_tab`
# so orchestrators can manage the layout without shelling out, and any
# bare `claude` command the MCP is asked to run is rewritten to the
# peer-enabled form so the spawned instance joins the channel. The new
# tools and the implicit rewrite are visible behavior for anyone using
# the MCP, hence the minor bump.
# 0.14.0 closes Epic #119: the `ccmux-peers` MCP grows three more
# tools so downstream orchestrators can drop every remaining
# `Bash(ccmux *)` permission. `inspect_pane` (#116 / #121) exposes
# `ccmux inspect` screen snapshots with a text or grid rendering;
# `poll_events` (#117 / #120) surfaces pane lifecycle events
# (pane_started / pane_exited / events_dropped) via a cursor-based
# long-poll with an optional `types` filter; `send_keys` (#118 /
# #122) delivers raw key input (Enter, Shift+Tab, Esc, Ctrl+<letter>,
# arbitrary `text`) so callers can answer interactive prompts or
# toggle Claude Code's Plan→AcceptEdits mode without touching the
# CLI. Three new MCP tools on the wire, hence the minor bump.
# 0.15.0 fixes the long-standing Claude Code caret rendering bug on
# Claude panes (#129): the host hardware caret now tracks Claude's
# inverse-video pseudo-caret across blink, redraw, and remote-row
# update phases instead of vanishing or jumping. User-visible
# editing behavior change, hence the minor bump.
version = "0.15.0"
edition = "2021"
description = "Claude Code Multiplexer — manage multiple Claude Code instances in TUI panes"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
portable-pty = "0.8"
vt100 = "0.16"
anyhow = "1.0"
unicode-width = "0.2.1"
arboard = "3.6"
syntect = "5.3"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
serde_json = "1"
dirs = "5"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# 2.4.2 removes the `CannotUnwind` guard from `exsync_op`. On 2.4.0 a
# Win32 write failure during IPC — normal when a `ccmux events` client
# disconnects ahead of the 30 s heartbeat — propagated via `?` before
# the guard's `.end()` ran, so its `Drop` aborted the whole TUI via
# `std::process::abort()` / `__fastfail`. Silent death, no panic. Pin
# so a downgrade can't reintroduce it.
interprocess = "2.4.2"
oneshot = "0.1"
subtle = "2"
humantime = "2"
# Upstream image-preview sync (#7): image decoding + ratatui-image
# picker / protocol detection for the preview panel.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
ratatui-image = { version = "10", default-features = false, features = ["crossterm"] }
# OS locale detection for auto UI-language selection. Wraps
# `nl_langinfo` on Unix and `GetUserDefaultLocaleName` on Windows so
# users without `LANG`/`LC_*` env vars (notably vanilla Windows Terminal
# + PowerShell, PR #94's target audience) still get the right default.
sys-locale = "0.3"

[target.'cfg(unix)'.dependencies]
# getuid() for the IPC endpoint directory name. Used only on Unix;
# on Windows the endpoint is a Named Pipe that doesn't need a uid.
libc = "0.2"
