[package]
name = "renga"
# Fork keeps its own version line. 0.7.0 jumps past upstream 0.6.0 so
# users can tell fork and upstream apart at a glance, and reflects the
# breaking change in `mode = "always"` removal (#90) plus the shipped
# IME overlay rework (#85 / #86) and image-preview sync (#91).
# 0.8.0 rolls up the i18n auto-locale (#98), click-event forwarding
# (#100), and IME freeze-on-overlay defaults flipped ON (#101); the
# last is a user-visible behavior change for anyone who opens the
# IME overlay, hence the minor bump rather than a patch.
# 0.9.0 ships per-tab peer messaging between Claude Code panes (#97 /
# #104): `renga mcp install` registers a stdio MCP server, `Alt+P`
# inserts the peer-enabled launch command, and `renga split --role
# claude` auto-launches Claude Code with the channel flag. The new
# keybinding and the user-visible `renga mcp` subcommand tree are why
# this is a minor bump.
# 0.10.0 centers on macOS Alt-key ergonomics:
# - #107 documents the per-terminal Option=Meta setup (WezTerm /
#   iTerm2 / Alacritty / Ghostty / Kitty / Terminal.app) in the
#   README and cross-links it from the IME overlay Alt+Enter note.
# - #108 adds a first-launch banner on macOS that surfaces the same
#   setup hint at runtime and links to the README anchor, dismissed
#   by any key or a 20 s timeout and persisted via a zero-byte
#   marker at `~/.config/renga/.macos_tip_dismissed`. Two new
#   override flags (`--no-macos-tip` / `--show-macos-tip`) and the
#   `RENGA_NO_MACOS_TIP` env var are the user-visible surface. The
#   landing page (`lp/index.html` / `lp/ja.html`) also grows a
#   dedicated "macOS setup: Option as Meta" section so visitors can
#   read the configuration before installing.
# Minor bump (not patch) because the banner is a first-launch
# behavior change on macOS and the CLI surface grows — patch is
# reserved for bug-only fixes per the release policy.
# 0.11.0 adds FILES-sidebar Claude launcher keys (#110): `c`
# splits the focused pane left/right and `v` splits it top/bottom,
# each opening the new pane in the directory selected in the tree
# and pre-filling the Alt+P launch line without pressing Enter so
# the user reviews and commits. New keybindings are why this is a
# minor bump rather than a patch.
# 0.12.0 opens the IME composition overlay at its configured maximum
# height (`OVERLAY_MAX_INNER_HEIGHT` = 10 rows) on the first frame
# instead of starting at a single row and growing as the user typed
# (#112). Overlay-open dimensions are visible behavior so this is a
# minor bump, not a patch.
# 0.13.0 brings the peer MCP pane-control tool suite and the Alt+P
# claude auto-upgrade (#114): the `renga-peers` MCP server gains
# `spawn_pane` / `close_pane` / `focus_pane` / `list_panes` / `new_tab`
# so orchestrators can manage the layout without shelling out, and any
# bare `claude` command the MCP is asked to run is rewritten to the
# peer-enabled form so the spawned instance joins the channel. The new
# tools and the implicit rewrite are visible behavior for anyone using
# the MCP, hence the minor bump.
# 0.14.0 closes Epic #119: the `renga-peers` MCP grows three more
# tools so downstream orchestrators can drop every remaining
# `Bash(renga *)` permission. `inspect_pane` (#116 / #121) exposes
# `renga inspect` screen snapshots with a text or grid rendering;
# `poll_events` (#117 / #120) surfaces pane lifecycle events
# (pane_started / pane_exited / events_dropped) via a cursor-based
# long-poll with an optional `types` filter; `send_keys` (#118 /
# #122) delivers raw key input (Enter, Shift+Tab, Esc, Ctrl+<letter>,
# arbitrary `text`) so callers can answer interactive prompts or
# toggle Claude Code's Plan→AcceptEdits mode without touching the
# CLI. Three new MCP tools on the wire, hence the minor bump.
# 0.15.0 fixes the long-standing Claude Code caret rendering bug on
# Claude panes (#129): the host hardware caret now tracks Claude's
# inverse-video pseudo-caret across blink, redraw, and remote-row
# update phases instead of vanishing or jumping. User-visible
# editing behavior change, hence the minor bump.
# 0.15.1 follow-up to #131: stop the native IME composition pre-edit
# from warping onto Claude's spinner / status row while Claude is
# streaming output. Two pieces — Windows conpty caret leak now hidden
# every frame instead of only behind the IME overlay, and the host
# caret is pinned to the input row found by its `❯` prompt glyph
# rather than chasing vt100's cursor. Patch bump because the change
# is a bug fix on top of 0.15.0's editing baseline.
# 0.15.2 follow-up to #138: tighten the sticky Claude-caret
# tracking so panes that previously hosted Claude Code don't stay
# latched into caret-tracking mode after returning to a normal
# shell prompt. Sticky-caret path now engages only while the PTY
# cursor is actually hidden; new regression test covers the gating
# helper. Patch bump — pure bug fix on top of 0.15.1.
# 0.16.0 adds structured cwd support to pane creation APIs (#135 / #140):
# spawn_pane / new_tab / renga split / renga new-tab / layout TOML all accept
# an optional `cwd` field, PaneInfo.cwd is surfaced by list_panes, and invalid
# cwd fails with err_code::CWD_INVALID before any layout mutation. Minor bump
# because it's a new API surface, not a bug fix.
# 0.17.0 adds set_pane_identity MCP tool and renga rename CLI (#136 / #142)
# for renaming / (re)assigning name / role on existing panes. Minor bump
# because it's a new API surface, not a bug fix.
# 0.18.0 adds spawn_claude_pane MCP tool (#137 / #144) for structured
# Claude launches: structured permission_mode / model / args[] fields
# replace free-form command string synthesis, with the peer channel
# enabled by construction. Minor bump because it's a new MCP tool.
# 0.18.2 republishes the 0.18.1 artifacts with corrected package metadata
# (repository/homepage URLs from the renga rename + URL sweep — #136 / #154
# follow-up). No code changes.
# 0.18.3 follows up the IME overlay bootstrap-on-open work: visible
# prompt text now transfers into the overlay when Claude's draft is
# directly readable, while `[Pasted text #…]` placeholders fall back
# to an empty overlay so collapsed pasted content is never lost. Patch
# bump because this is a bug fix on top of 0.18.2.
# 0.18.4 keeps per-pane IME overlay drafts across temporary close /
# reopen cycles (#168): Esc / Ctrl+C now suspend the composition
# buffer instead of discarding it, reopening restores the previous
# draft on that pane, and commit / pane teardown clear the saved
# draft. Patch bump because this is a bug fix on top of 0.18.3.
# 0.18.5 refreshes the public-facing positioning copy across README,
# landing page, docs metadata, npm package metadata, and installer /
# CLI strings so the project is presented consistently as an
# AI-native terminal for multi-agent coding rather than only as a
# Claude-only multiplexer. Patch bump because this is packaging /
# messaging work, not a behavior change in the binary itself.
# 1.0.0 marks the API surface freeze across MCP tools, CLI, IPC
# protocol, and config / layout / env (#201 / #207). The
# `set_summary` MCP tool moves from stable-stub to a real per-pane
# summary store, and `RENGA_TOKEN` / `RENGA_SOCKET` / `RENGA_PANE_ID`
# / `RENGA_PEER_CLIENT_KIND` are now part of the formal v1.0
# contract. Major bump under the new semver policy
# (`docs/semver-policy.md`); the Cargo.toml / npm version bump was
# omitted at tag time and is being reconciled at v1.1.0.
# 1.1.0 is the first release after the v1.0 freeze. Adds the
# `--fps` CLI flag with a `[ui] fps` config key counterpart so users
# can dial the main event-loop rate (#213, additive optional
# input), and a Ctrl+U IME overlay shortcut that wipes the entire
# composition buffer in one keystroke (#211, additive keybinding).
# Bug fixes: pane close now walks the Windows process tree via
# `taskkill /F /T` so descendant processes release cwd handles
# (#214 / #216), self-targeted peer sends emit `Event::PeerInbox`
# instead of silently dropping (#215 / #217), and the per-pane
# Claude/Codex cosmetic indicators latch on `*_ever_seen` so they
# survive OSC title rewrites (#209 / #210). Minor bump under the
# semver policy because two new optional features ship while the
# frozen surface remains backward-compatible.
# 1.1.1 wraps peer-channel notifications with a `📡 PEER MESSAGE …
# NOT FROM USER` banner so operators can tell at a glance that a
# `Human:` turn is renga peer chatter rather than user input, and
# server-side dedupes duplicate `(target, from, body)` re-sends
# within a 5-second window so chatty dispatchers no longer produce
# two phantom turns on the receiving pane (#221 / #222). Also fixes
# `spawn_codex_pane` erroring when `RENGA_PEER_CLIENT_KIND` is
# unset by treating the missing env as the default `claude` kind
# rather than a hard error (#203 / #220). Patch bump because the
# frozen API surface is unchanged; the banner is a presentation
# tweak and the dedupe / fallback are bug fixes.
# 1.1.2 routes terminal-level bracketed-paste (Event::Paste) to the
# IME composition overlay when it has focus, so on WSL2 / Windows
# Terminal / WezTerm a Ctrl+V no longer leaks pasted text through
# to the back-pane PTY (typically Claude Code's input row) while
# the user is composing in the overlay. CRLF / bare CR pasted from
# Windows clipboards is normalized to LF inside the overlay so the
# wrap/render path no longer renders stray `\r` as a zero-width
# control glyph, and the normalization streams through an iterator
# bounded by the existing 4096-char overlay cap so a megabyte-class
# hostile paste no longer briefly allocates a megabyte just to drop
# all but 4096 chars (#224). Patch bump: the frozen API surface is
# unchanged; this is a routing bug fix in keyboard input handling.
# 1.1.3 lets the IME composition overlay commit with `Ctrl+Enter` on
# WSL2 / Windows Terminal, where the host binds `Alt+Enter` to
# *Toggle Fullscreen* and swallows the chord before renga sees it.
# When extended key reporting is off, the host delivers Ctrl+Enter
# as a bare LF byte (0x0A) which crossterm decodes into `Ctrl+J`;
# the overlay commit predicate (`is_overlay_commit_key`) now
# accepts `Ctrl+J` as the WSL fallback for Ctrl+Enter so the buffer
# commits to the target pane via the existing bracketed-paste path.
# `Alt+Enter` remains the canonical binding on hosts that don't
# shadow it, and the existing `Ctrl+Enter` event path (kitty
# keyboard protocol / xterm modifyOtherKeys) is unchanged. README,
# README.ja, and the docs site keymap tables now call out the WSL
# caveat next to the Alt+Enter row (#226 / #227). Patch bump: the
# frozen API surface is unchanged; this is a keyboard-input bug fix.
version = "1.1.3"
edition = "2021"
description = "AI-native terminal for orchestrating multiple Claude Code and Codex agents in one workspace"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
portable-pty = "0.8"
vt100 = "0.16"
anyhow = "1.0"
unicode-width = "0.2.1"
arboard = "3.6"
syntect = "5.3"
ureq = { version = "2", default-features = false, features = ["tls", "json"] }
serde_json = "1"
dirs = "5"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# 2.4.2 removes the `CannotUnwind` guard from `exsync_op`. On 2.4.0 a
# Win32 write failure during IPC — normal when a `renga events` client
# disconnects ahead of the 30 s heartbeat — propagated via `?` before
# the guard's `.end()` ran, so its `Drop` aborted the whole TUI via
# `std::process::abort()` / `__fastfail`. Silent death, no panic. Pin
# so a downgrade can't reintroduce it.
interprocess = "2.4.2"
oneshot = "0.1"
subtle = "2"
humantime = "2"
# Upstream image-preview sync (#7): image decoding + ratatui-image
# picker / protocol detection for the preview panel.
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
ratatui-image = { version = "10", default-features = false, features = ["crossterm"] }
# OS locale detection for auto UI-language selection. Wraps
# `nl_langinfo` on Unix and `GetUserDefaultLocaleName` on Windows so
# users without `LANG`/`LC_*` env vars (notably vanilla Windows Terminal
# + PowerShell, PR #94's target audience) still get the right default.
sys-locale = "0.3"

[target.'cfg(unix)'.dependencies]
# getuid() for the IPC endpoint directory name. Used only on Unix;
# on Windows the endpoint is a Named Pipe that doesn't need a uid.
libc = "0.2"
